--- a/Project Euler/Files/Res/Storyboards/iPad/MainStoryboard_iPad.storyboard
+++ b/Project Euler/Files/Res/Storyboards/iPad/MainStoryboard_iPad.storyboard
@@ -367,7 +367,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Czp-Rq-whb">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Education Level:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Czp-Rq-whb">
                                 <rect key="frame" x="405.5" y="648" width="90" height="10"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="9"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -690,6 +690,7 @@
                         <outlet property="_questionCommentCountLabel" destination="ahj-MO-job" id="miR-wI-9jf"/>
                         <outlet property="_questionDateLabel" destination="P9i-no-2Og" id="2ER-dJ-Zqz"/>
                         <outlet property="_questionDifficultyLabel" destination="uYd-LI-MSr" id="G5X-zZ-w5n"/>
+                        <outlet property="_questionEducationLevelLabel" destination="XFI-qK-zkS" id="n9N-VH-dFf"/>
                         <outlet property="_questionHasMultipleSolutionsLabel" destination="Iga-i9-CLu" id="ObY-8x-ozF"/>
                         <outlet property="_questionIsChallengingImageView" destination="pC0-w2-kKb" id="XbP-Hj-Gd3"/>
                         <outlet property="_questionIsFunImageView" destination="PqP-GX-Yob" id="SRM-zG-raI"/>
