--- a/Project Euler/Files/Res/Storyboards/iPhone/MainStoryboard_iPhone.storyboard
+++ b/Project Euler/Files/Res/Storyboards/iPhone/MainStoryboard_iPhone.storyboard
@@ -701,6 +701,15 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Useful" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dh1-gQ-jsp">
+                                <rect key="frame" x="251.00000000000003" y="538" width="35.333333333333343" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="h76-d3-8FV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="11"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -762,6 +771,7 @@
                             <constraint firstItem="dz8-ta-DFM" firstAttribute="leading" secondItem="68A-Dj-xoW" secondAttribute="leading" id="OVb-Lw-XT6"/>
                             <constraint firstItem="f5F-cQ-hry" firstAttribute="width" secondItem="JDy-qD-FLz" secondAttribute="width" id="PD6-mR-Mfy"/>
                             <constraint firstItem="NMG-Si-HvN" firstAttribute="top" secondItem="2bm-jV-Hoo" secondAttribute="bottom" id="PJr-40-OOo"/>
+                            <constraint firstItem="dh1-gQ-jsp" firstAttribute="centerY" secondItem="Dfa-Xv-Ph6" secondAttribute="centerY" id="PUw-Ew-iVr"/>
                             <constraint firstItem="8AF-sH-MIB" firstAttribute="top" secondItem="zte-W2-whe" secondAttribute="bottom" id="PmQ-Fg-dfY"/>
                             <constraint firstItem="24h-L5-Tf0" firstAttribute="height" secondItem="JDy-qD-FLz" secondAttribute="height" id="PpH-py-IpI"/>
                             <constraint firstItem="FfW-Xp-PXv" firstAttribute="top" secondItem="zG2-Hd-Aci" secondAttribute="bottom" constant="5" id="Q3F-gz-WBE"/>
@@ -778,6 +788,7 @@
                             <constraint firstItem="rL8-ei-bi7" firstAttribute="width" secondItem="24h-L5-Tf0" secondAttribute="width" id="Won-BE-xec"/>
                             <constraint firstItem="arC-iP-2qS" firstAttribute="trailing" secondItem="bFS-o8-Zlc" secondAttribute="trailing" id="XD6-Pr-rCA"/>
                             <constraint firstAttribute="trailing" secondItem="xYY-sv-Ilg" secondAttribute="trailing" constant="5" id="XD7-s3-PAG"/>
+                            <constraint firstItem="Dfa-Xv-Ph6" firstAttribute="leading" secondItem="dh1-gQ-jsp" secondAttribute="trailing" constant="10" id="XJ4-rs-njd"/>
                             <constraint firstItem="9AR-JL-Vxn" firstAttribute="centerY" secondItem="zG2-Hd-Aci" secondAttribute="centerY" id="XoN-5V-OZ6"/>
                             <constraint firstItem="wgk-g8-gAD" firstAttribute="leading" secondItem="kEh-1z-WXH" secondAttribute="trailing" id="YSf-ef-mwZ"/>
                             <constraint firstItem="zG2-Hd-Aci" firstAttribute="trailing" secondItem="atg-Ue-tqo" secondAttribute="trailing" id="YfD-jR-a3s"/>
@@ -877,6 +888,7 @@
                         <outlet property="_questionIsChallengingImageView" destination="lr8-rG-feB" id="Wkd-S5-Iye"/>
                         <outlet property="_questionIsContestMathLabel" destination="Dfa-Xv-Ph6" id="H1O-UC-UAf"/>
                         <outlet property="_questionIsFunImageView" destination="caE-Ja-Xzm" id="gn2-9T-XFf"/>
+                        <outlet property="_questionIsUsefulLabel" destination="dh1-gQ-jsp" id="6t1-vK-tNl"/>
                         <outlet property="_questionLearnedSomethingNewLabel" destination="XIE-3X-uRY" id="S3S-ea-n1b"/>
                         <outlet property="_questionNumberLabel" destination="RPU-6n-VPf" id="6Fl-d2-OZH"/>
                         <outlet property="_questionRatingLabel" destination="S9G-2W-gdc" id="FmI-0l-WjL"/>
